--- a/style.css
+++ b/style.css
@@ -208,7 +208,6 @@ nav{
 /* best selller carousel */
 .card-1{
     width: 100%;
-    min-width: 200px;
     padding: 10px;
 }
 .arrows{position: relative;}
@@ -221,6 +220,86 @@ nav{
     padding: 5px;
 
 }
+
+
+/* our-services */
+.our-services{
+    margin: 10px 0;
+}
+.bg-sticky{
+    background: url(servicebg.png);
+    width: 100%;
+    height: 600px;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+.service-card{
+    width: 100%;
+    padding: 10px;
+    margin: 10px;
+    background: var(--light-color);
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    border-radius: 10px;
+    border-bottom: 3px solid var(--main-color);
+    transition: 0.3s;
+}
+.service-card:hover{
+    border-bottom: 6px solid var(--second-color);
+}
+.service-logo, .service-info{text-align: center; margin-bottom: 10px;}
+
+.our-services-heading{
+    margin: 40px 0 20px 0;
+}
+.our-services-heading p{letter-spacing: 6px; word-spacing: 3px;}
+.our-services-heading h1{font-size: 30px; font-weight: 800; margin: 10px 0;}
+
+
+/* discover best value  */
+.three-tabs li{
+    list-style: none;
+    display: inline-block;
+    padding: 20px 30px;
+}
+.three-tabs li a{
+    color: var(--dark-2);
+    text-decoration: none;
+    font-size: 25px;
+    position: relative;
+}
+.three-tabs li a::after{
+    content: '';
+    position: absolute;
+    width: 0px;
+    height: 4px;
+    background-color: var(--main-color);
+    top: 30px;
+    left: 0px;
+    transition: 0.3s;
+}
+.three-tabs li:hover a::after{
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media(max-width:796px){
@@ -241,27 +320,37 @@ nav{
         width: 100%;
         height: 100vh;
         position: absolute;
-        top: 52px;
+        top: 53px;
         left: -100%;
         text-align: right;
         background: var(--dark-2);
-        padding: 35px;
+        padding: 20px;
         transition: left 0.5s;
     }
-    .navigation-ul.active-nav{
-        left: -70%;
-    }
+    .navigation-ul.active-nav{left: -70%;}
     .navigation-ul li{display: block; padding-top: 20px;}
-    .navigation-ul li a{color: var(--light-color);}
-    #bars {display: block;}
-
-    .rows{width: 100%;}
+    .navigation-ul li a{color: #fff!important;}
+    #bars {display: block;} 
     .cols-3{width: 50%;}
+    .d-n{display: none;}
+    .d-full{width: 100%;}
+    .service-card{width: 250px;}
+    .card-img-1 img{
+        height: 50%;
+    }
 }
 @media(max-width:576px){
-    .rows{width: 100%; text-align: center;}
-    .cols-3{width: 97%; margin: 0 auto;}
-
+    .navigation-ul{top: 47px;}
+    .cols-3{width: 100%;}
+    .icons li a i{padding: 0px;}
+    .logo-brand img{width: 100px;}
+    .input-search{width: 70%; position: relative; bottom: -10px;}
+    .d-n{display: none;}
+    .d-full{width: 100%;}
+    .service-card{width: 140px;}
+    .card-img-1 img{
+        height: 50%;
+    }
 }
 
 
