--- a/style.css
+++ b/style.css
@@ -82,9 +82,7 @@ header{
 nav{
     width: 100%;
     padding: 10px 20px;
-    /* background: var(--light-color);
-     */
-     background: transparent;
+    background: transparent;
     box-shadow: 0 0 14px rgba(0,0,0,0.3);
 }
 
@@ -100,6 +98,7 @@ nav{
 }
 
 .navigation-ul{
+    position: relative;
     margin: 0;
     display: block;
 }
@@ -118,6 +117,32 @@ nav{
 .navigation-ul li a:hover {
     border-bottom: 2px solid var(--main-color);
 }
+
+/* dropdown-ul */
+
+
+
+.dropdown-ul{
+    margin: 0;
+    padding: 20px;
+    position: absolute;
+    top: 37px;
+    right: 50px;
+    background: rgba(0,0,0,0.2);
+    transition: ease 0.4s;
+    display: none;
+}
+.dropdown-ul li{
+    display: block;
+    list-style: none;
+    padding: 10px;
+}
+
+.navigation-ul li:hover .dropdown-ul{
+    display: block;
+}
+
+
 .logo-brand img{width: 150px;}
 
 .icons{
@@ -167,6 +192,8 @@ nav{
     width: 100%;
     background-size: cover;
 }
+
+
 .show{display: block;}
 
 
@@ -250,13 +277,14 @@ nav{
 .service-logo, .service-info{text-align: center; margin-bottom: 10px;}
 
 .our-services-heading{
-    margin: 40px 0 20px 0;
+    margin: 30px 0 20px 0;
 }
 .our-services-heading p{letter-spacing: 6px; word-spacing: 3px;}
 .our-services-heading h1{font-size: 30px; font-weight: 800; margin: 10px 0;}
 
 
 /* discover best value  */
+.three-tabs{border-bottom: 1px solid var(--gray-color);}
 .three-tabs li{
     list-style: none;
     display: inline-block;
@@ -287,8 +315,41 @@ nav{
 
 
 
+/* footer */
+
+footer{background: var(--dark-2); padding: 20px 20px;}
+.footer-head{font-size: 22px; color: var(--gray-color); margin-bottom: 10px; text-align: center;}
+.footer-ul{margin: 0;padding: 0; }
+.footer-ul p{color: var(--gray-color); line-height: 20px;}
+.footer-ul li{list-style: none; padding: 10px; text-align: center;}
+.footer-ul li a{text-decoration: none; color: var(--light-color);}
+
+.footer-icon{margin-top: 20px; text-align: center;}
+.footer-icon li a i{color: var(--second-color); font-size: 24px;}
+.footer-icon li a:hover i{color: var(--main-color)}
 
 
+
+
+
+
+
+
+/* mens index */
+
+.slider-3{
+    background:url(men-banner-1.jpg);
+    height: 550px;
+    width: 100%;
+    background-size: cover;
+    
+}
+.slider-4{
+    background:url(men-banner.jpg);
+    height: 550px;
+    width: 100%;
+    background-size: cover;
+}
 
 
 
@@ -331,6 +392,22 @@ nav{
     .navigation-ul li{display: block; padding-top: 20px;}
     .navigation-ul li a{color: #fff!important;}
     #bars {display: block;} 
+
+    .dropdown-ul{
+        width: 100%;
+        position: absolute;
+        margin: 0;
+        padding: 20px;
+        top: 174px;
+        right: 0px;
+        background: var(--dark-color);
+        transition: ease 0.4s;
+        display: none;
+    }
+
+
+
+
     .cols-3{width: 50%;}
     .d-n{display: none;}
     .d-full{width: 100%;}
@@ -348,9 +425,8 @@ nav{
     .d-n{display: none;}
     .d-full{width: 100%;}
     .service-card{width: 140px;}
-    .card-img-1 img{
-        height: 50%;
-    }
+    .card-img-1 img{height: 50%;}
+    .bg-sticky{background-position: center;}
 }
 
 
