add hideshow in header

--- a/style.css
+++ b/style.css
@@ -245,8 +245,8 @@ nav{
      width: 30px!important; height: 30px!important;
      color: #000!important;
     background: var(--main-color)!important;
-    border-radius: 100%;
-    padding: 5px;
+    border-radius: 100%!important;
+    padding: 6px 4px!important;
 
 }
 
