--- a/style.css
+++ b/style.css
@@ -124,19 +124,16 @@ nav{
 
 
 .dropdown-ul{
-    margin: 0;
-    padding: 20px;
     position: absolute;
-    top: 20px;
-    right: 70px;
-    background: rgba(0,0,0,0.2);
-    transition: ease 0.4s;
+    background: var(--dark-2);
+    transition: 0.4s;
     display: none;
+    left: 57%;
 }
 .dropdown-ul li{
-    display: block;
+    display: block;;
     list-style: none;
-    padding: 10px;
+    padding-top: 10px;
 }
 
 .navigation-ul li:hover .dropdown-ul{
@@ -278,7 +275,6 @@ nav{
 .bg-sticky{
     background: url(servicebg.png);
     width: 100%;
-    height: 600px;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -338,23 +334,28 @@ nav{
     margin: 20px 0;
 }
 
-.testimonial-slick{
-    margin: 10px;
+.testi-box{
+    width: 100%!important;
+    padding: 10px;
+    border: 1px solid var(--main-color);
+    /* background: var(--gray-color); */
+    /* box-shadow: 0 0 10px rgba(0,0,0,0.2); */
+    /* border-radius: 20px; */
+    
 }
-.box{
-    min-width: 300px!important;
-    padding: 50px 20px 10px 20px;
-    border: 2px solid var(--gray-color);
-    border-radius: 20px;
-    margin: 20px;
-}
-.testi-pro{
-    position: relative;
-    top: 0;
+.testi-pro{margin-bottom: 20px;}
+  
+.testi-pro img{border-radius: 100%; margin: 0 auto;}
+
+.slick-prev {
+    left: -30px!important;
 }
 
-.testi-pro img{border-radius: 100%;}
-.box-body{margin: 0 auto;}
+.slick-next {
+    right:-30px!important;
+}
+
+.box-body{text-align: center;}
 
 
 
@@ -460,6 +461,9 @@ footer{background: var(--dark-2); padding: 20px 20px;}
     .service-card{width: 250px;}
     .card-img-1 img{
         height: 50%;
+    }
+    .bg-sticky{
+        background-position: 20% 80%;
     }
 }
 @media(max-width:576px){
